# uptheguts

./: .gitignore  Cargo.toml  Dioxus.toml  index.html
docs/: index.html
docs/assets/dioxus/: Death By Golf.js  Death By Golf_bg.wasm  Up The Guts.js  Up The Guts_bg.wasm
docs/assets/dioxus/snippets/dioxus-interpreter-js-603636eeca72cf05/: inline0.js
src/: main.rs  up_the_guts.rs
